<resources>
    <string name="app_name">Zadanie</string>
    <string name="drinkimage">drinkImage</string>
    <string name="pour">pour</string>
    <string name="pourdrink">pourDrink</string>
    <string name="mainActivity" />
    <string name="zadjte_meno">Zadjte meno</string>
    <string name="zadajte_meno">Zadajte meno</string>
    <string name="zadajte_daje">Zadajte údaje</string>
    <string name="meno">Meno</string>
    <string name="zemepisn_d_ka">Zemepisná dĺžka</string>
    <string name="meno_podniku">Meno podniku</string>
    <string name="zemepisn_rka">Zemepisná šírka</string>
    <string name="zadajte_udaje">Zadajte údaje</string>
    <string name="potvrdi">Potvrdiť</string>
    <string name="asd">asd</string>
    <string name="Name" />
    <string name="yourname">YourName</string>
    <string name="companyName" />
    <string name="yourcompany">YourCompany</string>
    <string name="show_on_map">Show on Map</string>
    <string name="zadat_firmu">Zadať firmu</string>
    <string name="vymazat">Vymazať</string>
    <string name="deleteitem">deleteItem</string>
    <string name="pridat_firmu">Pridat firmu</string>
    <string name="sortbyname">sortByName</string>
    <string name="sort">SORT</string>
    <string name="call_us">CALL US</string>
    <string name="visit_webpage">VISIT WEBPAGE</string>
    <string name="add_company">Add company</string>
    <string name="sort_list">Sort list</string>
    <string name="fill_your_data">Fill your data</string>
    <string name="name">Name</string>
    <string name="name_of_company">Name of company</string>
    <string name="confirm">Confirm</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="verify_password">Verify password</string>
    <string name="specify">Specify</string>
    <string name="Confirm">Confirm</string>
    <string name="add">Add</string>
    <string name="add_friend">Add friend</string>
    <string name="friend_s_name">Friend\'s name</string>
    <string name="addFriend">Add</string>
    <string name="my_friends">My friends</string>
    <string name="abc">ABC</string>
    <string name="distance">Distance</string>
    <string name="people">People</string>
    <string name="click_to_find_nearest_company">Click to find nearest company</string>
    <string name="companyname">CompanyName</string>
    <string name="type">Type</string>
    <string name="logout">Logout</string>
    <string name="manage_friends">Manage friends</string>
    <string name="my_company">My company</string>
    <string name="friends">Friends</string>
    <string name="check_in_to_company">Check in to company</string>
    <string name="companies_with_members">Companies with members</string>
    <string name="show_details">show details</string>
    <string name="check_out">Check out</string>
    <string name="check_in">Check in</string>
    <string name="by_name">by name</string>
    <string name="by_company">by company</string>
    <string name="mapbox_access_token">sk.eyJ1IjoieGJ1ZGluc2t5IiwiYSI6ImNsYW50MDhvNzBzYmIzeW9iOXl1eWY2d3gifQ._byt29Vb27jDKqnARyM79Q</string>
    <string name="click_to_check_in_to_nearest_company">Click to check in to nearest company</string>
    <string name="remove">remove</string>
</resources>