<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputDataFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputName"
        android:layout_width="282dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="65dp"
        android:hint="@string/name"
        android:inputType="text"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataInputTitle"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/longitude"
        android:layout_width="282dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="65dp"
        android:hint="@string/longitude"
        android:inputType="numberDecimal"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitude"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/companyInput"
        android:layout_width="282dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="65dp"
        android:hint="@string/name_of_company"
        android:inputType="text"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/latitude"
        android:layout_width="282dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="65dp"
        android:hint="@string/latitude"
        android:inputType="numberDecimal"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyInput"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/dataInputTitle"
        android:layout_width="282dp"
        android:layout_height="45dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="95dp"
        android:text="@string/fill_your_data"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/inputName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="146dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitude" />

</androidx.constraintlayout.widget.ConstraintLayout>