<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddFriendFragment">

    <TextView
        android:id="@+id/addFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="54dp"
        android:text="@string/add_friend"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/friendName"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/addFriend"
        app:layout_constraintStart_toStartOf="parent">
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/friendName"
        android:layout_width="282dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="64dp"
        android:hint="@string/friend_s_name"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFriend" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="165dp"
        android:text="@string/addFriend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendName" />
</androidx.constraintlayout.widget.ConstraintLayout>